# dqn-plays-pong

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  main.py  pyproject.toml
core/: agent.py  config.py  layers.py  model.py  replay_buffer.py  wrappers.py
runs/pong_experiment_1760173443/: events.out.tfevents.1760173443.Michaels-Laptop-2.local.84595.0
runs/pong_experiment_1760201699/: events.out.tfevents.1760201699.Michaels-Laptop-2.local.64409.0
runs/pong_experiment_1760202271/: events.out.tfevents.1760202271.Michaels-Laptop-2.local.68535.0
runs/pong_experiment_1760268505/: events.out.tfevents.1760268505.Michaels-Laptop-2.local.36254.0
runs/pong_experiment_1760447676/: events.out.tfevents.1760447676.Michaels-Laptop-2.local.26151.0
runs/pong_experiment_1760447715/: events.out.tfevents.1760447715.Michaels-Laptop-2.local.26732.0
runs/pong_experiment_1760447785/: events.out.tfevents.1760447785.Michaels-Laptop-2.local.27668.0
runs/pong_experiment_1760447818/: events.out.tfevents.1760447818.Michaels-Laptop-2.local.28158.0
runs/pong_experiment_1760447831/: events.out.tfevents.1760447831.Michaels-Laptop-2.local.28458.0
runs/pong_experiment_1760447876/: events.out.tfevents.1760447876.Michaels-Laptop-2.local.29088.0
runs/pong_experiment_1760447885/: events.out.tfevents.1760447885.Michaels-Laptop-2.local.29306.0
runs/pong_experiment_1760447897/: events.out.tfevents.1760447897.Michaels-Laptop-2.local.29563.0
runs/pong_experiment_1760447925/: events.out.tfevents.1760447925.Michaels-Laptop-2.local.29991.0
scripts/: play.py  train.py
(+11 files in other folders)
