[project]
name = "dqn-plays-pong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.11.2",
    "black>=25.9.0",
    "gymnasium[accept-rom-license,atari]>=1.2.1",
    "isort>=7.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "torch>=2.8.0",
]
